<resources>
    <string name="app_name">HEH HUHH</string>
    <string name="Hello">Ya called?</string>
    <string name="font">serif-monospace</string>
    <string name="second_activity">Second Activity</string>
    <string name="url">URL</string>
    <string name="number">Number</string>
    <string name="title_activity_third">Third Activity</string>
    <string name="button_1">Pass Data</string>
    <string name="todo">TODO</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="age">Age</string>
    <string name="login">Login</string>
    <string name="cancel">Cancel</string>
    <string name="register">Register</string>
    <string name="username_error">Username must not be blank</string>
    <string name="password_error">Password must not be blank</string>
    <string name="selection">Selected position: </string>
    <string name="fourthActivity">Opening profile</string>
    <string name="fifthActivity">Opening login</string>
    <string name="thirdActivity">Opening profile setup</string>
    <string name="profile">Profile</string>
    <string name="doomActivity">Opening game profile</string>
    <string name="Doom">What begins as a suspicious security outbreak leads to an invasion of Hell on Mars.
    Battle against the hordes of Hell and machines of deadly nature in this action-packed, horror-filled First Person Shooter.
    Find yourself Knee-Deep in the dead, through the Shores of Hell and much worse places to end this malevolent foe.</string>
    <string name="doomURL">https://store.steampowered.com/app/2280/Ultimate_Doom/</string>
    <string name="doomtitle">Doom</string>
    <string name="bloodtitle">Blood</string>
    <string name="Blood">You\'re Caleb, one of four of the most devout in the cult of the demon lord Tchernobog.
    One day the four of you are called to his presence, only for him to betray you four in gruesome ways for his enjoyment.
    Years later as you emerge from your grave, you bow revenge as you claim in a twisted grin-\'I live, Again!\'.
    Let the shedding of Blood begin!</string>
    <string name="bloodURL">https://store.steampowered.com/app/299030/Blood_One_Unit_Whole_Blood/</string>
    <string name="games">Games</string>
    <string name="blaketitle">Blake Stone</string>
    <string name="BlakeStone">Play as Interstellar Agent Blake Stone as he\'s sent to face off against the evil Dr Goldfire.
    Travel to a set of hostile facilities filled with overzealous guards, insane scientists, their mutant creations and more.
    Sabotage Goldfire\'s operations by taking away his supplies and gold and end his reign of terror across the stars!</string>
    <string name="blakeURL">https://store.steampowered.com/app/358190/Blake_Stone_Aliens_of_Gold/</string>

    <string-array name="colors">
        <item>#ff0000</item>
        <item>#ff4000</item>
        <item>#ff8000</item>
        <item>#ffbf00</item>
        <item>#ffff00</item>
        <item>#bfff00</item>
        <item>#80ff00</item>
        <item>#40ff00</item>
        <item>#00ff00</item>
        <item>#00ff40</item>
        <item>#00ff80</item>
        <item>#00ffbf</item>
        <item>#00ffff</item>
        <item>#00bfff</item>
        <item>#0080ff</item>
        <item>#0040ff</item>
        <item>#0000ff</item>
        <item>#4000ff</item>
        <item>#8000ff</item>
        <item>#bf00ff</item>
        <item>#ff00ff</item>
        <item>#ff00bf</item>
        <item>#ff0080</item>
        <item>#ff0040</item>
        <item>#ff0000</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Shared Preferences -->
    <string name="login_activity_file">com.teaching.android.miprimeraapp.LOGIN_ACTIVITY_FILE</string>
    <string name="audio">Audio:</string>
    <string name="pause">Pause</string>
    <string name="play">Play</string>
    <string name="stop">Stop</string>

</resources>
