<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ThirdActivity"
    android:gravity="bottom"
    android:layout_weight="1"
    android:orientation="vertical"
    android:theme="@style/AppTheme"
    android:background="@drawable/agitation">

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="@string/username"
        android:inputType="text"
        android:lines="1"
        android:padding="4dp"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:textSize="14sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="4dp"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:textSize="14sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:maxLength="15"
        android:padding="4dp"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:textSize="14sp"
        android:textStyle="bold" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="end">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:layout_weight=".5"
            android:text="@string/age"
            android:textSize="14sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/age"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_weight=".5"
            android:hint="@string/age"
            android:inputType="number"
            android:maxLength="3"
            android:textSize="14sp"
            android:textStyle="bold" />
    </LinearLayout>

    <Button
        android:id="@+id/button6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/button_1"
        android:layout_margin="10dp"
        android:onClick="introducir"/>


    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@mipmap/ic_launcher"
        android:contentDescription="@string/todo"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:onClick="unf"/>

</LinearLayout>